--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     </ul>
 </body>
 <img src="https://imgs.search.brave.com/gc71RsBH4La4RY0oXOOKF9vvfyi4MUW7Fynl2fj9tLk/rs:fit:500:0:1:0/g:ce/aHR0cHM6Ly9zdGF0/aWMudmVjdGVlenku/Y29tL3N5c3RlbS9y/ZXNvdXJjZXMvdGh1/bWJuYWlscy8wMDYv/OTY2LzQxMi9zbWFs/bC9zaWxob3VldHRl/cy1vZi1iaWN5Y2xl/cy1wYXJrZWQtaW4t/YS1iZWF1dGlmdWwt/cGhvdG8uanBn">
-<img src="C:\Users\perez\OneDrive\Documentos\UTN\DESARROLLO DE SOFTWARE\practica\html-demo\imagen\imagen.jpg">
+<img src="imagen\imagen.jpg">
 <br>
 <a href="https://claude.ai" target="_blank">Consultas</a>
 
